--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,17 +18,10 @@ repos:
       - id: end-of-file-fixer
         exclude: LICENSE
 
-  - repo: local
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.2
     hooks:
-      - id: black
-        name: black
-        entry: poetry run black --config pyproject.toml
-        types: [python]
-        language: system
-
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.267'
-    hooks:
+      - id: ruff-format
       - id: ruff
 
   - repo: local
