--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,7 +2,7 @@ accelerate==0.24.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 aiohttp==3.8.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 aiosignal==1.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 alabaster==0.7.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
-appnope==0.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Darwin" or python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "darwin"
+appnope==0.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and (platform_system == "Darwin" or sys_platform == "darwin")
 asttokens==2.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 async-timeout==4.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 attrs==23.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -16,7 +16,8 @@ cffi==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and im
 cfgv==3.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 charset-normalizer==3.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 click==8.1.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
-colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Windows" or python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "win32"
+cmake==3.27.7 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12" and (platform_system == "Windows" or sys_platform == "win32")
 comm==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 contourpy==1.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 coverage[toml]==7.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -39,7 +40,7 @@ fsspec[http]==2023.10.0 ; python_full_version >= "3.8.1" and python_version < "3
 furo==2023.9.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitdb==4.0.11 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitpython==3.1.40 ; python_full_version >= "3.8.1" and python_version < "3.12"
-huggingface-hub==0.18.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+huggingface-hub==0.17.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 identify==2.5.30 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -56,6 +57,7 @@ jupyter-client==8.5.0 ; python_full_version >= "3.8.1" and python_version < "3.1
 jupyter-core==5.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyterlab-widgets==3.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
+lit==17.0.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 markdown-it-py==3.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 markupsafe==2.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib-inline==0.1.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -67,19 +69,19 @@ multiprocess==0.70.15 ; python_full_version >= "3.8.1" and python_version < "3.1
 nest-asyncio==1.5.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
 networkx==3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 nodeenv==1.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-numpy==1.24.4 ; python_version < "3.12" and python_full_version >= "3.8.1"
-nvidia-cublas-cu11==11.11.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cuda-cupti-cu11==11.8.87 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cuda-nvrtc-cu11==11.8.89 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cuda-runtime-cu11==11.8.89 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cudnn-cu11==8.9.5.29 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cufft-cu11==10.9.0.58 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-curand-cu11==10.3.0.86 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cusolver-cu11==11.4.1.48 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cusparse-cu11==11.7.5.86 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-nccl-cu11==2.19.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-nvtx-cu11==11.8.86 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-packaging==21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+numpy==1.24.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+nvidia-cuda-cupti-cu11==11.7.101 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+nvidia-cufft-cu11==10.9.0.58 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+nvidia-curand-cu11==10.2.10.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+nvidia-cusolver-cu11==11.4.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+nvidia-cusparse-cu11==11.7.4.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+nvidia-nccl-cu11==2.14.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+nvidia-nvtx-cu11==11.7.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
+packaging==23.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pandas==2.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 parso==0.8.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pastel==0.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -114,7 +116,7 @@ ruamel-yaml-clib==0.2.8 ; platform_python_implementation == "CPython" and python
 ruamel-yaml==0.18.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ruff==0.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 safetensors==0.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-safety==2.3.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
+safety==2.3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scikit-learn==1.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -141,20 +143,22 @@ stack-data==0.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 stevedore==5.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sympy==1.12 ; python_full_version >= "3.8.1" and python_version < "3.12"
 threadpoolctl==3.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-tokenizers==0.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+tokenizers==0.14.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-torch==2.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+torch==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tornado==6.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.66.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 traitlets==5.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-transformers[sentencepiece,tokenizers,torch]==4.33.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+transformers[sentencepiece,tokenizers,torch]==4.34.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+triton==2.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tzdata==2023.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 urllib3==2.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 virtualenv==20.24.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wcwidth==0.2.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
+wheel==0.41.2 ; python_full_version >= "3.8.1" and python_version < "3.12" and (sys_platform == "linux" or platform_system == "Linux") and (sys_platform == "linux" or platform_machine == "x86_64")
 widgetsnbextension==4.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 xxhash==3.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 yarl==1.9.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
