--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 # Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
 [build-system]
-requires = ["poetry_core>=1.2.0"]
+requires = ["poetry_core>=1.6.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
@@ -47,61 +47,60 @@ classifiers = [  #! Update me
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
 
-rich = "^10.13.0"
+rich = ">=10.13.0"
 transformers =  { version = ">=4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
-protobuf = "^3.20.1"
-captum = "^0.6.0"
-numpy = "^1.21.6"
-torchtyping = "^0.1.4"
+protobuf = ">=3.20.1"
+captum = ">=0.6.0"
+numpy = ">=1.21.6"
+torchtyping = ">=0.1.4"
 typeguard = "<=2.13.3"
 # Omitting future torch releases as they don't install nvidia dependencies: https://github.com/pytorch/pytorch/issues/100974
-torch = "^2.0.0"
-matplotlib = "~3.5.3"
-tqdm = "^4.64.0"
-poethepoet = "^0.13.1"
-nvidia-cublas-cu11 = { version = "11.10.3.66", platform = 'linux' }
-nvidia-cuda-cupti-cu11 = { version = "11.7.101", platform = 'linux' }
-nvidia-cuda-nvrtc-cu11 = { version = "11.7.99", platform = 'linux' }
-nvidia-cuda-runtime-cu11 = { version = "11.7.99", platform = 'linux' }
-nvidia-cudnn-cu11 = { version = "8.5.0.96", platform = 'linux' }
-nvidia-cufft-cu11 = { version = "10.9.0.58", platform = 'linux' }
-nvidia-curand-cu11 = { version = "10.2.10.91", platform = 'linux' }
-nvidia-cusolver-cu11 = { version = "11.4.0.1", platform = 'linux' }
-nvidia-cusparse-cu11 = { version = "11.7.4.91", platform = 'linux' }
-nvidia-nccl-cu11 = { version = "2.14.3", platform = 'linux' }
-nvidia-nvtx-cu11 = { version = "11.7.91", platform = 'linux' }
+torch = ">=2.0.0"
+matplotlib = ">=3.5.3"
+tqdm = ">=4.64.0"
+poethepoet = ">=0.13.1"
+nvidia-cublas-cu11 = { version = ">=11.10.3.66", platform = 'linux' }
+nvidia-cuda-cupti-cu11 = { version = ">=11.7.101", platform = 'linux' }
+nvidia-cuda-nvrtc-cu11 = { version = ">=11.7.99", platform = 'linux' }
+nvidia-cuda-runtime-cu11 = { version = ">=11.7.99", platform = 'linux' }
+nvidia-cudnn-cu11 = { version = ">=8.5.0.96", platform = 'linux' }
+nvidia-cufft-cu11 = { version = ">=10.9.0.58", platform = 'linux' }
+nvidia-curand-cu11 = { version = ">=10.2.10.91", platform = 'linux' }
+nvidia-cusolver-cu11 = { version = ">=11.4.0.1", platform = 'linux' }
+nvidia-cusparse-cu11 = { version = ">=11.7.4.91", platform = 'linux' }
+nvidia-nccl-cu11 = { version = ">=2.14.3", platform = 'linux' }
+nvidia-nvtx-cu11 = { version = ">=11.7.91", platform = 'linux' }
 
-ipykernel = { version = "^6.19.2", optional = true }
-ipywidgets = { version = "^8.0.0rc2", optional = true }
-joblib = { version = "^1.2.0", optional = true }
-scikit-learn = { version = "^1.1.1", optional = true }
-scipy = { version = "^1.8.1", optional = true}
+ipykernel = { version = ">=6.19.2", optional = true }
+ipywidgets = { version = ">=8.0.0rc2", optional = true }
+joblib = { version = ">=1.2.0", optional = true }
+scikit-learn = { version = ">=1.1.1", optional = true }
+scipy = { version = ">=1.8.1", optional = true}
 datasets = { version = ">=2.3.2", optional = true }
 
 [tool.poetry.group.docs]
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-sphinx = "^5.3.0"
-sphinxemoji = "^0.2.0"
-sphinxext-opengraph = "^0.4.2"
-sphinx-copybutton = "^0.4.0"
-sphinx-gitstamp = "^0.3.2"
-sphinx-design = "^0.4.1"
-furo = "^2022.12.7"
+sphinx = ">=5.3.0"
+sphinxemoji = ">=0.2.0"
+sphinxext-opengraph = ">=0.4.2"
+sphinx-copybutton = ">=0.4.0"
+sphinx-gitstamp = ">=0.3.2"
+sphinx-design = ">=0.4.1"
+furo = ">=2022.12.7"
 
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
-bandit = "^1.7.4"
-safety = "^2.2.0"
-black = "^22.6.0"
-darglint = "^1.8.1"
-pre-commit = "^2.19.0"
-pytest = "^7.2.0"
-pytest-cov = "^4.0.0"
-ruff  = "^0.0.252"
+bandit = ">=1.7.4"
+safety = ">=2.2.0"
+darglint = ">=1.8.1"
+pre-commit = ">=2.19.0"
+pytest = ">=7.2.0"
+pytest-cov = ">=4.0.0"
+ruff  = ">=0.1.2"
 
 [tool.poetry.extras]
 sklearn = ["scikit-learn", "joblib"]
@@ -112,29 +111,6 @@ notebook = ["ipykernel", "ipywidgets"]
 upgrade-pip = "python -m pip install --upgrade pip"
 torch-cpu = "python -m pip install torch --index-url https://download.pytorch.org/whl/cpu"
 torch-cuda = "python -m pip install torch"
-
-[tool.black]
-# https://github.com/psf/black
-target-version = ["py38"]
-preview = true
-line-length = 119
-color = true
-
-exclude = '''
-/(
-    \.git
-    | \.hg
-    | \.mypy_cache
-    | \.tox
-    | \.venv
-    | _build
-    | buck-out
-    | build
-    | dist
-    | env
-    | venv
-)/
-'''
 
 
 [tool.mypy]
@@ -209,15 +185,16 @@ exclude = [
 ]
 fix = true
 ignore = [
-    "C901",
-    "E731",
-    "E741",
-    "F821",
-    "C901",
-    "B006",
-    "PLR2004",
-    "PLR0913",
-    "PLR0915",
+    "B006", # mutable default argument
+    "C901", # function too complex
+    "E501", # line too long (handled by format)
+    "E731", # do not assign a lambda expression, use a def
+    "E741", # ambiguous variable name
+    "F821", # undefined name
+    "PLR2004", # unnamed numerical constants used
+    "PLR0913", # too many arguments
+    "PLR0915", # too many statements
+    "W191", # indentation contains tabs (handled by format)
 ]
 line-length = 119
 select = [
@@ -227,7 +204,6 @@ select = [
     "C", # flake8-comprehensions
     #"D", # flake8-docstrings
     "B", # flake8-bugbear
-    "Q", # flake8-quotes
     "I", # isort
     "UP", # flake8-pyupgrade
     "PLC", # flake8-pylint
@@ -235,11 +211,13 @@ select = [
     "PLR", # flake8-pylint
     "PLW", # flake8-pylint
 ]
-src = ["inseq", "tests"]
+src = ["inseq", "examples", "tests"]
+extend-include = ["*.ipynb"]
 
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
+"**/examples/*" = ["B018", "E402"]
 
 [tool.ruff.isort]
 known-first-party = ["inseq"]
